--- a/src/views/singleAlbum.ejs
+++ b/src/views/singleAlbum.ejs
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1> single Album title
+        <h1> single Album titledd
           <p class="lead"></p>
         </h1>
       </div>
